# rustdesk-plugin

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/de/lobianco/saftssh/rustdesk/: IRustDeskFileTransferCallback.aidl  IRustDeskFileTransferSession.aidl  IRustDeskSession.aidl  IRustDeskSessionCallback.aidl  IRustDeskSessionService.aidl
app/src/main/java/de/lobianco/saftssh/rustdesk/: InfoActivity.kt  NativeBridge.kt  RustDeskSessionService.kt  SyntheticCursor.kt
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
rust/android-shim/: Cargo.toml
rust/android-shim/src/: lib.rs
